font weight bold

--- a/coding-bootcamp-testimonials-slider-master/index.html
+++ b/coding-bootcamp-testimonials-slider-master/index.html
@@ -17,7 +17,7 @@
     
     <div class="mySlides fade">
        <div class="img-container">
-          <img src="images/image-tanya.jpg" class="img">
+          <img src="images/image-tanya.jpg" class="img" alt="tanya">
        </div>
        <div class="content-container">
           <p class="content">“ I’ve been interested in coding for a while but never taken the jump, until now. 
@@ -32,7 +32,7 @@
 
     <div class="mySlides fade">
       <div class="img-container">
-         <img src="images/image-john.jpg" class="img">
+         <img src="images/image-john.jpg" class="img" alt="john">
       </div>
       <div class="content-container">
           <p class="content">“ If you want to lay the best foundation possible I’d recommend taking this course. 
